# LSTM_GNN_routing-

./: .gitignore  README.md  pyproject.toml
configs/: lstm_gnn_ngen_curriculum.yml  noah_precomputed_runoff_gnn_curriculum.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss_log1p_relu.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss_percentile_relu.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss_percentile_relu_distribution_balanced_seed123.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss_percentile_relu_distribution_balanced_seed123_hydraulic_edges_directed_mpnn.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss_percentile_relu_distribution_balanced_seed2024.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss_percentile_relu_distribution_balanced_seed2024_hydraulic_edges_directed_mpnn.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss_percentile_relu_distribution_balanced_seed42.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss_percentile_relu_distribution_balanced_seed42_hydraulic_edges_directed_mpnn.yml  noah_precomputed_runoff_gnn_curriculum_center_mapping_derived_hydrology_jkge_loss_percentile_relu_distribution_balanced_seed777.yml  (+60 more)
data/static/: SOC_Salt.nc  (+5 more)
scripts/: train_lstm_gnn.sh
(+109 files in other folders)
